backend:AppUserResource-addition/EventResource-EventService

--- a/backend-web/src/main/resources/application.properties
+++ b/backend-web/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 ## H2 database conection
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=
 
 ## Web Client H2 database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 ## JPA Config
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # Spring Security
