back:application-properties-profiles/refactor

--- a/backend-web/src/main/resources/application.properties
+++ b/backend-web/src/main/resources/application.properties
@@ -1,19 +1,1 @@
-## H2 database conection
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.username=admin
-# spring.datasource.password=
-
-# ## Web Client H2 database
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-
-## JPA Config
-# spring.jpa.show-sql=false
-# spring.jpa.properties.hibernate.format_sql=true
-
-## PostgreSQL database conection
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=rootpass
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=dev
