--- a/backend-web/src/main/resources/application-dev.properties
+++ b/backend-web/src/main/resources/application-dev.properties
@@ -8,8 +8,8 @@
 # spring.h2.console.path=/h2-console
 
 ## JPA Config
- spring.jpa.show-sql=true
- spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 
 ## PostgreSQL database conection
 spring.datasource.url=jdbc:postgresql://localhost:5432/presenter_db
