--- a/backend-web/src/main/resources/application-dev.properties
+++ b/backend-web/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@
 # spring.jpa.properties.hibernate.format_sql=true
 
 ## PostgreSQL database conection
-spring.datasource.url=jdbc:postgresql://localhost:5432/presenter_db
-spring.datasource.username=postgres
-spring.datasource.password=rootpass
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://localhost:5432/presenter_db
+#spring.datasource.username=postgres
+#spring.datasource.password=rootpass
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
