--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "vite --open",
+    "dev": "vite --open",
     "build": "vite build"
   },
   "eslintConfig": {
