--- a/frontend-web/tsconfig.json
+++ b/frontend-web/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "target": "ESNext",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client",
+      "vite-plugin-svgr/client"
+    ],
     "lib": [
       "dom",
       "dom.iterable",
