--- a/backend-web/src/main/resources/application-dev.properties
+++ b/backend-web/src/main/resources/application-dev.properties
@@ -11,9 +11,9 @@
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
 
-## PostgreSQL database conection
-#spring.datasource.url=jdbc:postgresql://localhost:5432/presenter_db
-#spring.datasource.username=postgres
-#spring.datasource.password=rootpass
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=update
+# Database Connection Config
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
