back:swagger-api-documentation

--- a/backend-web/src/main/resources/application.properties
+++ b/backend-web/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.profiles.active=dev
 
+# Database Connection
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+# Swagger Documentation
+springdoc.api-docs.path=/swagger/v3/api-docs
+springdoc.swagger-ui.path=/swagger/v3/api-docs-ui.html
+springdoc.swagger-ui.operationsSorter=method
