--- a/backend-web/src/main/resources/application-dev.properties
+++ b/backend-web/src/main/resources/application-dev.properties
@@ -17,3 +17,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# Swagger Documentation
+springdoc.api-docs.path=/swagger/v3/api-docs
+springdoc.swagger-ui.path=/swagger/v3/api-docs-ui.html
+springdoc.swagger-ui.operationsSorter=method
