back:validation-MethodArgumentNotValidException-handling

--- a/backend-web/src/main/resources/application.properties
+++ b/backend-web/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 springdoc.api-docs.path=/swagger/v3/api-docs
 springdoc.swagger-ui.path=/swagger/v3/api-docs-ui.html
 springdoc.swagger-ui.operationsSorter=method
+
+spring.web.locale=en_US
+spring.web.locale-resolver=fixed
