--- a/backend-web/src/main/resources/application-dev.properties
+++ b/backend-web/src/main/resources/application-dev.properties
@@ -22,3 +22,6 @@ spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.path=/swagger/v3/api-docs
 springdoc.swagger-ui.path=/swagger/v3/api-docs-ui.html
 springdoc.swagger-ui.operationsSorter=method
+
+spring.web.locale=en_US
+spring.web.locale-resolver=fixed
